--- a/traefik/traefik.production.yaml
+++ b/traefik/traefik.production.yaml
@@ -6,6 +6,24 @@ entryPoints:
     address: ":80"
   websecure:
     address: ":443"
+    # Cloudflare IP Addresses. Only necessary if using CF's Proxy feature - https://www.cloudflare.com/ips/
+    forwardedHeaders:
+      insecure: false
+      trustedIPs:
+        - "173.245.48.0/20"
+        - "103.21.244.0/22"
+        - "103.22.200.0/22"
+        - "103.31.4.0/22"
+        - "141.101.64.0/18"
+        - "108.162.192.0/18"
+        - "190.93.240.0/20"
+        - "188.114.96.0/20"
+        - "197.234.240.0/22"
+        - "198.41.128.0/17"
+        - "162.158.0.0/15"
+        - "104.16.0.0/12"
+        - "172.64.0.0/13"
+        - "131.0.72.0/22"
   mysql:
     address: ":3306"
   metrics:
@@ -85,8 +103,8 @@ certificatesResolvers:
       # caServer: https://acme-v02.api.letsencrypt.org/directory
       storage: /etc/traefik/acme/acme.json
       dnsChallenge:
-        provider: namecheap
+        provider: cloudflare
         delayBeforeCheck: 42
         resolvers:
           - "1.1.1.1:53"
-          - "8.8.8.8:53"
+          - "8.8.8.8:53" # 1.0.0.1:53
