--- a/webhook/Dockerfile
+++ b/webhook/Dockerfile
@@ -2,6 +2,6 @@ FROM almir/webhook
 
 RUN  apk --update --upgrade add git bash
 
-COPY /hooks/hooks.json /etc/webhook/hooks.json
+COPY /hooks/hooks.example.json /etc/webhook/hooks.json
 
 CMD ["-verbose", "-hooks=/etc/webhook/hooks.json", "-hotreload"]
